--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
     <stroke
         android:width="2dp"
         android:color="@color/colorButton"
         />
+
+    <size android:height="50dp" android:width="50dp"/>
     <corners
-        android:radius="5dp"
-        />
-    <padding
-        android:left="2dp"
-        android:right="2dp"
-        android:top="2dp"
-        android:bottom="2dp"
+        android:radius="3dp"
         />
     <solid
         android:color="@color/colorButton"/>
