--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,14 @@
 
 
     <Button
-        android:padding="20dp"
+        android:padding="5dp"
         android:textColor="#000"
         android:background="@drawable/button"
         android:id="@+id/about_alc"
         android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:text="@string/about_alc"
         android:textStyle="bold"
         android:textAllCaps="true"
@@ -36,7 +36,7 @@
 
 
     <Button
-        android:padding="20dp"
+
         android:textColor="#000"
         android:background="@drawable/button"
         android:id="@+id/profile"
@@ -47,7 +47,7 @@
         android:layout_below="@id/about_alc"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:text="@string/profile"
         />
 
